<resources>
    <string name="app_name">TRUSTMAGApp</string>
    <string name="title">TRUSTMAG</string>
    <string name="acceuil">Accueil</string>
    <string name="video">Vidéos</string>
    <string name="podcast">Podcasts</string>
    <string name="galerie">Galerie</string>
    <string name="menu">Menu</string>
    <string name="contact">Contact</string>
    <string name="fleche">Flèche</string>
    <string name="buttonMail">ENVOYER</string>
    <string name="message">Votre Message</string>
    <string name="enter_email">Entrez votre mail</string>
    <string name="objet">Objet</string>
    <string name="Message">Votre Message</string>
    <string name="question">Une infos ? Nous rejoindre ? Ecrivez nous !</string>
    <string name="slogan">Vivez l\'actualité autrement !</string>

    //page PODCAST//
    <string name="PODCAST">NOS PODCASTS</string>
    <string name="txtpodcast">Retrouvez nos derniers podcast !</string>
    <string name="descpdcst">Le policier Abdoulaye Kanté est revenu sans détour sur ce qui fait ce qu\'il est. Son parcours, son passé dans l'armée, sa médiatisation  [ … ]</string>

</resources>