<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ContactActivity">

    <!-- top de l'application avec logo et titre TRUSTMAG -->


    <ImageView
        android:id="@+id/logo"
        android:layout_width="208dp"
        android:layout_height="127dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/trustmag" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="64dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#CA1616"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="695dp" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="Entrez votre mail"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:background="@drawable/border_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/objet"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/border_textview"
        android:ems="10"
        android:hint="Objet"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <EditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/border_textview"
        android:hint="@string/message"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objet" />

    <Button
        android:id="@+id/buttonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="42dp"
        android:background="@color/red"
        android:backgroundTint="@color/white"
        android:hapticFeedbackEnabled="false"
        android:text="ENVOYER"
        android:textColor="@color/red"
        android:textColorLink="@color/white"
        app:backgroundTint="@color/white"
        app:iconTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="33dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

